--- a/Project/WebApplication1/WebApplication1.csproj
+++ b/Project/WebApplication1/WebApplication1.csproj
@@ -229,6 +229,7 @@
     <Content Include="Views\Account\Manage.cshtml" />
     <Content Include="Views\Account\Register.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\Home\Detail.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
